tests/baselines/reference/callGenericFunctionWithZeroTypeArguments.errors.txt
tests/cases/conformance/types/typeParameters/typeArgumentLists/callGenericFunctionWithZeroTypeArguments.ts(30,10): error TS2684: The 'this' context of type 'C2<unknown>' is not assignable to method's 'this' of type 'C2<T>'.
  Type 'unknown' is not assignable to type 'T'.
    'T' could be instantiated with an arbitrary type which could be unrelated to 'unknown'.


==== tests/cases/conformance/types/typeParameters/typeArgumentLists/callGenericFunctionWithZeroTypeArguments.ts (1 errors) ====
    // valid invocations of generic functions with no explicit type arguments provided 
    
    function f<T>(x: T): T { return null; }
    var r = f(1);
    
    var f2 = <T>(x: T): T => { return null; }
    var r2 = f2(1);
    
    var f3: { <T>(x: T): T; }
    var r3 = f3(1);
    
    class C {
        f<T>(x: T): T {
            return null;
        }
    }
    var r4 = (new C()).f(1);
    
    interface I {
        f<T>(x: T): T;
    }
    var i: I;
    var r5 = i.f(1);
    
    class C2<T> {
        f(x: T): T {
            return null;
        }
    }
    var r6 = (new C2()).f(1);
             ~~~~~~~~~~
!!! error TS2684: The 'this' context of type 'C2<unknown>' is not assignable to method's 'this' of type 'C2<T>'.
!!! error TS2684:   Type 'unknown' is not assignable to type 'T'.
!!! error TS2684:     'T' could be instantiated with an arbitrary type which could be unrelated to 'unknown'.
    
    interface I2<T> {
        f(x: T): T;
    }
    var i2: I2<number>;
    var r7 = i2.f(1);